--- a/2015_spring/task/task0001/task0001.html
+++ b/2015_spring/task/task0001/task0001.html
@@ -3,20 +3,50 @@
 <head>
 	<meta charset='utf-8'>
 	<title>task0001</title>
-	<style type="text/css">
-	*{
-		padding: 0;margin: 0;
-	}
-	#center1{
-		width: 960px;background-color: red;height: 200px;margin: 0 auto;
-	}
-	#center2{
-		width: 960px;background-color: red;height: 200px;position: absolute;left: 50%;margin-left: -480px;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="task0001.css">
 </head>
 <body>
-<div id="center1"></div><br/>
-<div id="center2"></div>
+	<h1>fanyj1994</h1>	
+	<ul>
+		<li><a href="task0001.html">task0001</a></li>
+		<li><a href="http://www.baidu.com">baidu</a></li>
+	</ul>
+	<h2>启蒙运动</h2>
+	<p>17世纪英国发生大变动以后，欧洲政治革命的第二个阶段实在1789年法国革命之前的一个世纪中出现的所谓的启蒙运动。启蒙运动一词源于以下事实：这一运动的领袖们认为他们生活在一个启蒙的时代。他们将过去基本上看成是一个迷信和无知的时代，认为只是到了他们的时代，人类终于从黑暗走进光明。因而启蒙时代的一个基本特点是有了：“进步”这一持续到21世纪的观念。由于启蒙运动，人们开始普遍认为，人类的状况会稳定地改善，因此，每一代的状况都将比前一代更好。</p>
+	<img src="img/task0001_1.jpg" alt="">
+
+	<div class="center1"></div>
+	<div class="center2"></div>
+
+	<div class="container clear">
+		<div class="left"></div>
+		<div class="right"></div>
+	</div>
+	<div class="contain clear">
+		<div class="div1"></div>
+		<div class="div2"></div>
+	</div>
+
+	<div class="three-row">
+		<div class="left"></div>
+		<div class="center"></div>
+		<div class="right"></div>
+	</div>
+	<div class="three-row">
+		<div class="fLeft"></div>
+		<div class="fRight"></div>
+		<div class="middle"></div>
+	</div>
+	<div class="float-contain">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
 </body>
 </html>
